# dioxus-i18n

./: Cargo.toml
src/: use_i18n.rs
tests/common/: test_hook.rs
