[package]
authors = ["Marc Espín <mespinsanz@gmail.com>"]
categories = ["accessibility", "gui", "localization", "internationalization"]
description = "i18n integration for Dioxus apps based on Fluent Project."
edition = "2021"
license = "MIT"
name = "dioxus-i18n"
readme = "./README.md"
repository = "https://github.com/dioxus-community/dioxus-i18n"
version = "0.4.3"

[dependencies]
dioxus = {version = "0.7.0", default-features = false, features = [
  "hooks",
  "macro",
  "signals",
]}
fluent = "0.17"
thiserror = "2.0"
unic-langid = {version = "0.9", features = ["macros"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2.5.0"

[dev-dependencies]
dioxus = {version = "0.7.0", features = ["desktop"]}
freya = "0.3"
futures = "0.3.31"
pretty_assertions = "1.4.1"
unic-langid = {version = "0.9.5", features = ["macros"]}
